[metadata]
name = iddt
version = 0.1.11
author = Timothy Duffy
author-email = tim@timduffy.me
summary = Internet Document Discovery Tool
description-file = README.md
license = GPLv3+
url = https://github.com/thequbit/iddt
classifier =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
keywords =
    documents
    scraper
    discovery
[files]
packages =
    iddt
